fix label jump

--- a/src/components/Commehub/VisualDesign/VisualDesign.module.css
+++ b/src/components/Commehub/VisualDesign/VisualDesign.module.css
@@ -40,6 +40,14 @@
   margin-bottom: 22px;
 }
 
+.imageContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
 .container img {
   width: 100%;
   height: auto;
